--- a/src/locales/cn/prelude2_preludes.json
+++ b/src/locales/cn/prelude2_preludes.json
@@ -1,93 +1,93 @@
 {
-    "Applied Science": "应用科学",
-    "Action: Remove 1 resource here to either add 1 resource to ANY CARD WITH A RESOURCE or gain 1 standard resource.": "行动：移除此处1个资源，选择向已有资源的卡牌添加1个资源或获得1标准资源",
-    "Add 6 science resources here.": "在此卡添加6个科学资源",
+  "Applied Science": "应用科学",
+  "Action: Remove 1 resource here to either add 1 resource to ANY CARD WITH A RESOURCE or gain 1 standard resource.": "行动：移除此处1个资源，选择向已有资源的卡牌添加1个资源或获得1标准资源",
+  "Add 6 science resources here.": "在此卡添加6个科学资源",
 
-    "Atmospheric Enhancers": "大气增强器",
-    "Raise temperature 2 steps, or raise oxygen 2 steps, or raise Venus 2 steps. Draw 2 cards with floater icons.": "选择：提升温度2级/氧气2级/金星参数2级。抽取2张带云资源图标的卡牌",
+  "Atmospheric Enhancers": "大气增强器",
+  "Raise temperature 2 steps, or raise oxygen 2 steps, or raise Venus 2 steps. Draw 2 cards with floater icons.": "选择：提升温度2级/氧气2级/金星参数2级。抽取2张带云资源图标的卡牌",
 
-    "Board of Directors": "董事会",
-    "ACTION: ": "行动：",
-    "DRAW 1 PRELUDE CARD: EITHER DISCARD IT, OR PAY 12 M€ AND REMOVE 1 DIRECTOR RESOURCE HERE TO PLAY IT.": "抽取1张前奏卡：选择弃置，或支付12M€并移除此卡1个董事资源来打出",
-    "Add 4 director resources here.": "在此卡添加4个董事资源",
+  "Board of Directors": "董事会",
+  "ACTION: ": "行动：",
+  "DRAW 1 PRELUDE CARD: EITHER DISCARD IT, OR PAY 12 M€ AND REMOVE 1 DIRECTOR RESOURCE HERE TO PLAY IT.": "抽取1张前序卡：选择弃置，或支付12M€并移除此卡1个董事资源来打出",
+  "Add 4 director resources here.": "在此卡添加4个董事资源",
 
-    "Colony Trade Hub": "殖民地贸易枢纽",
-    "Increase your energy production 1 step. Gain 2 titanium": "提升1级能量产能，获得2钛",
-    "Effect: When any colony is placed, gain 2 M€.": "效果：每当有殖民地被放置时，获得2M€",
+  "Colony Trade Hub": "殖民地贸易枢纽",
+  "Increase your energy production 1 step. Gain 2 titanium": "提升1级能量产能，获得2钛",
+  "Effect: When any colony is placed, gain 2 M€.": "效果：每当有殖民地被放置时，获得2M€",
 
-    "Corridors of Power": "权力走廊",
-    "Effect: Each time you become party leader, draw 1 card.": "效果：每次成为派系领袖时，抽取1张卡牌",
-    "Raise your TR 1 step and gain 4 M€": "提升1级TR并获得4M€",
+  "Corridors of Power": "权力走廊",
+  "Effect: Each time you become party leader, draw 1 card.": "效果：每次成为派系领袖时，抽取1张卡牌",
+  "Raise your TR 1 step and gain 4 M€": "提升1级TR并获得4M€",
 
-    "Early Colonization": "早期殖民",
-    "INCREASE ALL COLONY TRACKS 2 STEPS": "所有殖民地轨道提升2格",
-    "Place a colony. Gain 3 energy.": "放置1个殖民地，获得3能量",
+  "Early Colonization": "早期殖民",
+  "INCREASE ALL COLONY TRACKS 2 STEPS": "所有殖民地轨道提升2格",
+  "Place a colony. Gain 3 energy.": "放置1个殖民地，获得3能量",
 
-    "Floating Trade Hub": "浮空贸易站",
-    "Action: Add 2 floaters to ANY card.": "行动：向任意卡牌添加2个云资源",
-    "Action: Remove any number of floaters here to gain that many of one standard resource.": "行动：移除此处任意数量云资源，获得等量标准资源",
+  "Floating Trade Hub": "浮空贸易站",
+  "Action: Add 2 floaters to ANY card.": "行动：向任意卡牌添加2个云资源",
+  "Action: Remove any number of floaters here to gain that many of one standard resource.": "行动：移除此处任意数量云资源，获得等量标准资源",
 
-    "Focused Organization": "专注组织",
-    "Action: Discard 1 card and spend 1 standard resource to draw 1 card and gain 1 standard resource.": "行动：弃置1张卡并消耗1标准资源，抽取1张卡并获得1标准资源",
-    "Draw 1 card and gain 1 standard resource.": "抽取1张卡并获得1标准资源",
+  "Focused Organization": "专注组织",
+  "Action: Discard 1 card and spend 1 standard resource to draw 1 card and gain 1 standard resource.": "行动：弃置1张卡并消耗1标准资源，抽取1张卡并获得1标准资源",
+  "Draw 1 card and gain 1 standard resource.": "抽取1张卡并获得1标准资源",
 
-    "High Circles": "高层社交圈",
-    "Raise your TR 1 step and draw 1 card with PARTY REQUIREMENT. Place 2 delegates in one party.": "提升1级TR并抽取1张带派系需求的卡牌，在1个派系放置2名代表",
-    "Effect: You have +1 influence.": "效果：获得+1影响力",
+  "High Circles": "高层社交圈",
+  "Raise your TR 1 step and draw 1 card with PARTY REQUIREMENT. Place 2 delegates in one party.": "提升1级TR并抽取1张带派系需求的卡牌，在1个派系放置2名代表",
+  "Effect: You have +1 influence.": "效果：获得+1影响力",
 
-    "Industrial Complex": "工业综合体",
-    "Lose 18 M€. INCREASE ALL YOUR PRODUCTIONS THAT ARE LOWER THAN 1, TO 1.": "失去18M€。将所有低于1级的产能提升至1级",
+  "Industrial Complex": "工业综合体",
+  "Lose 18 M€. INCREASE ALL YOUR PRODUCTIONS THAT ARE LOWER THAN 1, TO 1.": "失去18M€。将所有低于1级的产能提升至1级",
 
-    "Main Belt Asteroids": "主带小行星",
-    "Action: Gain 1 asteroid to ANY CARD.": "行动：向任意卡牌添加1个小行星",
-    "Effect: When gaining an asteroid HERE, gain 1 titanium.": "效果：当在此卡获得小行星时，额外获得1钛",
-    "Lose 5 M€. 1 VP per 2 asteroids here.": "支付5M€。此卡每2个小行星获得1VP",
+  "Main Belt Asteroids": "主带小行星",
+  "Action: Gain 1 asteroid to ANY CARD.": "行动：向任意卡牌添加1个小行星",
+  "Effect: When gaining an asteroid HERE, gain 1 titanium.": "效果：当在此卡获得小行星时，额外获得1钛",
+  "Lose 5 M€. 1 VP per 2 asteroids here.": "支付5M€。此卡每2个小行星获得1VP",
 
-    "Nobel Prize": "诺贝尔奖",
-    "Gain 5 M€. Draw 2 cards with requirements.": "获得5M€。抽取2张有条件限制的卡牌",
+  "Nobel Prize": "诺贝尔奖",
+  "Gain 5 M€. Draw 2 cards with requirements.": "获得5M€。抽取2张有条件限制的卡牌",
 
-    "Old Mining Colony": "古老采矿殖民地",
-    "Increase your titanium production 1 step. Place 1 colony. Discard 1 card.": "提升1级钛产能，放置1个殖民地，弃置1张卡",
+  "Old Mining Colony": "古老采矿殖民地",
+  "Increase your titanium production 1 step. Place 1 colony. Discard 1 card.": "提升1级钛产能，放置1个殖民地，弃置1张卡",
 
-    "Planetary Alliance": "行星联盟",
-    "Raise your TR 2 steps. Draw 1 Jovian card and 1 Venus card.": "提升2级TR，抽取1张木星卡和1张金星卡",
+  "Planetary Alliance": "行星联盟",
+  "Raise your TR 2 steps. Draw 1 Jovian card and 1 Venus card.": "提升2级TR，抽取1张木星卡和1张金星卡",
 
-    "Preservation Program": "保存计划",
-    "Effect: SKIP THE FIRST TR YOU GAIN IN EACH GENERATION'S ACTION PHASE.": "效果：跳过每世代行动阶段获得的第一个TR",
-    "Raise your TR 5 steps.": "提升5级TR",
+  "Preservation Program": "保存计划",
+  "Effect: SKIP THE FIRST TR YOU GAIN IN EACH GENERATION'S ACTION PHASE.": "效果：跳过每时代行动阶段获得的第一个TR",
+  "Raise your TR 5 steps.": "提升5级TR",
 
-    "Project Eden": "伊甸园计划",
-    "Place 1 ocean tile, 1 city tile, and 1 greenery tile. Discard 3 cards.": "放置1个海洋、1个城市和1个绿化区，弃置3张卡",
+  "Project Eden": "伊甸园计划",
+  "Place 1 ocean tile, 1 city tile, and 1 greenery tile. Discard 3 cards.": "放置1个海洋、1个城市和1个绿化板块，弃置3张卡",
 
-    "Recession": "经济衰退",
-    "EACH OPPONENT loses 5 M€ and decreases their M€ production 1 step. You gain 10 M€.": "每位对手失去5M€并降低1级M€产能，你获得10M€",
+  "Recession": "经济衰退",
+  "EACH OPPONENT loses 5 M€ and decreases their M€ production 1 step. You gain 10 M€.": "每位对手失去5M€并降低1级M€产能，你获得10M€",
 
-    "Rise To Power": "权力崛起",
-    "Increase your M€ production 3 steps and place 3 delegates. YOU MAY PLACE THEM IN SEPARATE PARTIES.": "提升3级M€产能并放置3名代表（可分配至不同派系）",
+  "Rise To Power": "权力崛起",
+  "Increase your M€ production 3 steps and place 3 delegates. YOU MAY PLACE THEM IN SEPARATE PARTIES.": "提升3级M€产能并放置3名代表（可分配至不同派系）",
 
-    "Soil Bacteria": "土壤细菌",
-    "Effect: When playing a plant tag or a microbe tag, including this, gain 1 plant.": "效果：打出植物或微生物标签卡牌（含此卡）时获得1植物",
-    "Draw 2 microbe cards and gain 3 plants.": "抽取2张微生物卡并获得3植物",
+  "Soil Bacteria": "土壤细菌",
+  "Effect: When playing a plant tag or a microbe tag, including this, gain 1 plant.": "效果：打出植物或微生物标签卡牌（含此卡）时获得1植物",
+  "Draw 2 microbe cards and gain 3 plants.": "抽取2张微生物卡并获得3植物",
 
-    "Space Lanes": "太空航线",
-    "Effect: When you play a Jovian, Earth, or Venus tag, you pay 2 M€ less for it.": "效果：打出木星/地球/金星标签卡牌时减少2M€费用",
-    "Gain 3 titanium.": "获得3钛",
+  "Space Lanes": "太空航线",
+  "Effect: When you play a Jovian, Earth, or Venus tag, you pay 2 M€ less for it.": "效果：打出木星/地球/金星标签卡牌时减少2M€费用",
+  "Gain 3 titanium.": "获得3钛",
 
-    "Suitable Infrastructure": "适宜基础设施",
-    "Effect: Once per action you take, gain 2 M€ if you increase any productions.": "效果：每执行一次提升产能的行动后，获得2M€",
-    "Gain 5 steel.": "获得5钢",
+  "Suitable Infrastructure": "适宜基础设施",
+  "Effect: Once per action you take, gain 2 M€ if you increase any productions.": "效果：每执行一次提升产能的行动后，获得2M€",
+  "Gain 5 steel.": "获得5钢",
 
-    "Terraforming Deal": "星球改造协议",
-    "Effect: Each step your TR is raised, you gain 2 M€.": "效果：每提升1级TR时获得2M€",
+  "Terraforming Deal": "改造协议",
+  "Effect: Each step your TR is raised, you gain 2 M€.": "效果：每提升1级TR时获得2M€",
 
-    "Venus Contract": "金星合约",
-    "Effect: Each step you raise Venus, gain 3 M€.": "效果：每提升1级金星参数时获得3M€",
-    "Draw 1 Venus card. Raise your TR 1 step.": "抽取1张金星卡并提升1级TR",
+  "Venus Contract": "金星合约",
+  "Effect: Each step you raise Venus, gain 3 M€.": "效果：每提升1级金星参数时获得3M€",
+  "Draw 1 Venus card. Raise your TR 1 step.": "抽取1张金星卡并提升1级TR",
 
-    "Venus L1 Shade": "金星L1遮阳板",
-    "Raise Venus 3 steps.": "提升3级金星参数",
+  "Venus L1 Shade": "金星L1遮阳板",
+  "Raise Venus 3 steps.": "提升3级金星参数",
 
-    "World Government Advisor": "世界政府顾问",
-    "Action: RAISE 1 GLOBAL PARAMETER WITHOUT GETTING ANY TR OR OTHER BONUSES.": "行动：提升1个全局参数但不获得TR及其他奖励",
-    "Raise your TR 2 steps. Draw 1 card.": "提升2级TR并抽取1张卡"
-  }
+  "World Government Advisor": "世界政府顾问",
+  "Action: RAISE 1 GLOBAL PARAMETER WITHOUT GETTING ANY TR OR OTHER BONUSES.": "行动：提升1个全球参数但不获得TR及其他奖励",
+  "Raise your TR 2 steps. Draw 1 card.": "提升2级TR并抽取1张卡"
+}
