--- a/src/locales/cn/standard_projects.json
+++ b/src/locales/cn/standard_projects.json
@@ -1,32 +1,47 @@
 {
+  "Buffer Gas": "缓冲气体",
+  "Spend 16 M€ to increase your TR 1 step. Solo games only.": "花费16 M€来提升改造度1级，仅Solo用。",
+  "Spend 25 M€ to place a city tile and increase your M€ production 1 step.": "花费25 M€来放置一个城市板块并增加你的M€产量1级。",
+  "Spend 17 M€ to place a colony.": "花费17 M€来放置1个殖民地。",
+  "Spend 23 M€ to place a greenery tile and raise oxygen 1 step.": "花费23 M€放置一个森林板块，并提升氧气1级。",
+  "Spend 11 M€ to increase your energy production 1 step.": "花费11 M€来增加你的电力产量1级。",
+  "Sell Patents": "贩卖专利",
+  "Sell patents": "贩卖专利",
+  "Discard any number of cards to gain that amount of M€.": "丢弃任意数量的卡牌来获得对应数量的M€",
+  "Asteroid": "小行星",
+  "asteroid": "小行星",
+  "Spend 14 M€ to raise the temperature 1 step.": "花费14 M€来提升温度1级。",
+  "Air Scrapping": "气体采集",
+  "Air Scrapping (Var)": "气体采集（变体）",
+  "Spend 15 M€ to raise Venus 1 step.": "花费15 M€来提升金星改造度1级。",
+  "Spend 15M€, less 1M€ per Venus tag you have, to raise Venus 1 step.": "花费15 M€，每有一个金星标签减少1 M€，来提升金星改造度1级。",
+  "max -5M€": "最多减5 M€",
+  "Spend 18 M€ to place an ocean tile.": "花费18 M€来放置一个海洋板块。",
 
-    "Standard Projects": "标准项目",
-    "Asteroid":"小行星",
-    "ASTEROID":"小行星",
+  "Collusion": "共谋",
+  "Spend 1 corruption to convert 1 or 2 neutral delegates into your own delegates.": "花费1腐败，将1或2名中立代表转换为你的代表。",
+  "Excavate": "挖掘",
+  "Spend 7 M€ (steel may be used) to excavate a space.": "花费7 M€（可用钢材）来开挖一个空间。",
 
-    "Air Scrapping": "气体采集",
-    "Spend 15 M€ to raise Venus 1 step.": "花费15 M€来提升金星改造度1级。",
-
-    "Buffer Gas": "缓冲气体",
-    "Spend 16 M€ to increase your TR 1 step. Solo games only.": "花费16 M€来提升改造度1级，仅Solo用。",
-
-    "Power plant": "发电厂",
-    "Spend 11 M€ to increase your energy production 1 step.": "花费11 M€来增加你的电力产量1级。",
-
-    "Aquifer": "开发含水层",
-    "Spend 18 M€ to place an ocean tile.": "花费18 M€来放置一个海洋板块。",
-
-    "Greenery": "森林",
-    "Spend 23 M€ to place a greenery tile and raise oxygen 1 step.": "花费23 M€放置一个森林板块，并提升氧气1级。",
-
-    "City": "城市",
-    "Spend 25 M€ to place a city tile and increase your M€ production 1 step.": "花费25 M€来放置一个城市板块并增加你的M€产量1级。",
-
-    "Sell Patents": "贩卖专利",
-    "Discard any number of cards to gain that amount of M€.": "丢弃任意数量的卡牌来获得对应数量的M€",
-
-    "Spend 14 M€ to raise the temperature 1 step.": "花费14 M€来提升温度1级。",
-
-    "Colonies": "殖民地",
-    "Spend 17 M€ to place a colony.": "花费17 M€来放置1个殖民地。"
+  "Build Moon Colony": "建造月球殖民地",
+  "Lunar Habitat": "月球居所",
+  "Lunar Habitat (var. 1)": "月球居所（变体1）",
+  "Lunar Habitat (var. 2)": "月球居所（变体2）",
+  "Spend 22 M€ and 1 titanium to place a habitat on The Moon and raise your M€ production 1 step.": "花费22 M€和1钛来在月球上放置一个居所，并提高你的M€产量1级。",
+  "Spend 23 M€ (titanium may be used) AND 1 titanium to place a habitat on The Moon and raise your M€ production 1 step.": "花费23 M€（可用钛）并消耗1钛来在月球上放置一个居所，并提高你的M€产量1级。",
+  "Spend 26 M€ to place a habitat on The Moon and raise your M€ production 1 step.": "花费26 M€来在月球上放置一个居所，并提高你的M€产量1级。",
+  "Build Moon Mine": "建造月球矿场",
+  "Lunar Mine": "月球矿场",
+  "Lunar Mine (var. 1)": "月球矿场（变体1）",
+  "Lunar Mine (var. 2)": "月球矿场（变体2）",
+  "Spend 20 M€ and 1 titanium to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费20 M€和1钛在月球上放置一个矿场，提升采矿率1级，并提升钢材产量1级。",
+  "Spend 21 M€ (titanium may be used) AND 1 titanium to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费21 M€（可用钛）并消耗1钛，在月球上放置一个矿场，提升采矿率1级，并提升钢材产量1级。",
+  "Spend 23 M€ to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费23 M€来在月球上放置一个矿场，提升采矿率1级，并提升钢材产量1级。",
+  "Build Moon Road": "建造月球道路",
+  "Road Infrastructure": "道路基础设施",
+  "Road Infrastructure (var. 1)": "道路基础设施（变体1）",
+  "Road Infrastructure (var. 2)": "道路基础设施（变体2）",
+  "Spend 18 M€ and 1 steel to place a road on The Moon and raise the Logistics Rate 1 step.": "花费18 M€和1钢材，在月球上放置一条道路，并提升物流等级1级。",
+  "Spend 19 M€ (steel may be used) AND 1 steel to place a road on The Moon and raise the Logistics Rate 1 step.": "花费19 M€（可用钢材）并消耗1钢材，在月球上放置一条道路，并提升物流等级1级。",
+  "Spend 21 M€ to place a road on The Moon and raise the Logistics Rate 1 step.": "花费21 M€来在月球上放置一条道路，并提升物流等级1级。"
 }
