--- a/src/locales/cn/turmoil_events.json
+++ b/src/locales/cn/turmoil_events.json
@@ -1,38 +1,111 @@
 {
-  "Discard 2 cards from hand. Gain 2 M€ per influence.": "从手牌丢弃2张牌。每有1点影响力,获得2 M€",
-  "Gain 2 M€ per Venus tag (max 5) and influence.": "每有1个金星标志(最多5个)和影响力,获得2 M€",
-  "Gain 1 plant per plant production (max 5) and influence.": "每有1个植物产产量(最多5点)和影响力,获得1个植物资源",
-  "Gain 1 M€ for each card in hand (no limit) and influence.": "每有1张手牌(无上限)和影响力,获得1 M€",
-  "First player places an ocean tile. Gain 1 plant and 1 steel per influence.": "起始玩家放置一个海洋板块。每点影响力获得1个植物资源和1个钢铁资源",
-  "Gain 1 titanium for each Jovian tag (max 5) and influence.": "每有1个木星标志(最多5个)和影响力,获得1个钛资源",
-  "Gain 2 M€ for each event played (max 5) and influence.": "每有1张打出的事件卡(最多5张)和影响力,获得2 M€",
-  "Add a floater to each card that can collect floaters. Add 1 floater for each influence to a card.": "在所有可以放置云资源的卡上放置1个云资源。每有1点影响力,放置1个云资源到卡牌上",
-  "Lose 2 floaters from a card or 10 M€. Draw 1 card for each influence.": "损失一张牌上的2个云资源或10 M€。每点影响力,抽1张牌",
-  "Gain 10 M€ if you have 9 or more different tags. Influence counts as unique tags.": "计算你的不同标志数量加影响力,如果合计至少有9点,则获得10 M€",
-  "First player removes 1 ocean tile from the gameboard. Gain 1 standard resource per influence.": "起始玩家从游戏版图上移除1块海洋板块。每点影响力获得1个标准资源(自选)",
-  "Lose all plants except 3 + influence.":"保留'3+影响力'个植物资源,丢弃多余的",
-  "Count your influence plus building tags and city tiles (no limits). The player with most (or 10 in solo) gains 2 TR, the 2nd (or 5 in solo) gains 1 TR (ties are friendly).":  "计算'建筑标志+城市板块+影响力'的总数(无限制),点数最大的玩家获得2改造度(TR),第二名获得1改造度(TR),同分时两人都获得",
-  "Gain 2 M€ for each influence and set of 5 TR over 15 (max 5 sets).": "计算'影响力+(改造度-15)/5'的点数(最多5点),每点获得2 M€",
-  "Lose all heat. Lose 2 M€ for each building tag (max 5, then reduced by influence).": "损失所有热能资源。每有1个建筑标志,损失2 M€(最多5个标志),每有1点影响力,少扣2 M€",
-  "Gain 2 M€ for each Earth tag (max 5) and influence.": "每有1个地球标志(最多5个)和影响力,获得2 M€",
-  "Increase energy production 1 step per 2 power tags (no limit). Influence counts as power tags.": "每有2个电力标志(无限制),提升1级电力产量,影响力视作电力标志",
-  "Gain 2 M€ for each space tag (max 5) and influence.": "每有1个太空标志(最多5个)和影响力,获得2 M€",
-  "Increase M€ production 1 step for each colony. Gain 1 titanium for each influence.": "每有一个殖民地,提升M€产量1级。每有1点影响力,获得1个钛资源",
-  "Lose 1 titanium for each Jovian tag (max 5, then reduced by influence).": "每有1个木星标志,损失1个钛资源(最多5个,每有1点影响力少扣1个)",
-  "Lose 4 M€ for each tile adjacent to ocean (max 5, then reduced by influence).": "每有1块邻近海洋的板块,损失4 M€(最多5块,每有1点影响力少算1块)",
-  "Lose 3 M€ for each building tag (max 5, then reduced by influence).": "每有1个建筑标志损失3 M€(最多5个标志,每有1点影响力少算1个标志)",
-  "Gain 1 steel for each steel production (max 5) and influence.": "每有1级钢铁产量(最多5)和影响力,获得1个钢铁资源",
-  "Lose 3 M€ for each set of 5 TR over 10 (max 5 sets). Increase M€ production 1 step per influence.": "计算'(改造度-10)/5'的点数(舍弃小数位),每有1点损失3 M€。每有1点影响力提升1级M€产量",
-  "Count Earth tags and ADD(!) influence. The player(s) with most (at least 1) loses 2 TR, and 2nd most (at least 1) loses 1 TR. SOLO: Lose 2 TR if the sum is 4 or more.":"计算'地球标志数量+影响力'的点数,最多的玩家损失2改造度(TR),第二多的玩家损失1改造度(TR)",
-  "Lose 4 M€ for each city tile (max 5, then reduced by influence).": "每有1个城市板块,损失4 M€(最多结算5个城市,每有1点影响力少算1个)",
-  "Decrease steel and energy production 1 step each. Gain 1 steel per influence.": "降低钢铁和电力产量各1级。每有1点影响力,获得1个钢铁资源",
-  "Decrease temperature 2 steps. Draw 1 card per influence.": "降低火星温度2级。每有1点影响力,抽1张牌",
-  "Lose 3 M€ for each space tag (max 5, then reduced by influence).": "每有1个空间标志,损失3 M€。(最多计算5个标志,每有1点影响力少算1个)",
-  "Lose 3 M€ for each blue card (max 5, then reduced by influence).": "每打出过1张蓝色卡,损失3 M€。(最多计算5张,每有1点影响力少算1张)",
-  "Gain 2 M€ for each science tag (max 5) and influence.": "每有1个科学标志(最多5个)和影响力,获得2 M€",
-  "All cards with resources on them gain 1 resource. Draw 1 card for each influence.": "在每个拥有资源的卡牌上增加一个资源。每有1点影响力抽1张牌",
-  "Gain 2 M€ for each city tile (max 5) and influence.": "每有1个城市板块(最多5个)和影响力,获得2 M€",
-  "Increase temperature 2 steps. Increase heat production 1 step per influence.": "提升火星温度2级。每有1点影响力,提升1级热能产量",
-  "Reduce TR 4 steps. Each influence prevents 1 step.": "降低最多4改造度(TR)。每有1点影响力少降低1改造度(TR)",
-  "Diaspora": "流散"
+  "Lose 1 M€ for each card in your hand over 6 (no limit) reduced by 2 M€ per influence (min 0M€). Draw 2 cards if your hand contains 6 cards or less.": "手牌超过6张时，每多1张损失1 M€（无上限），每点影响力可减少2 M€损失（最低0 M€）。若手牌在6张或以下，则抽取2张卡牌",
+  "Count corruption and ADD influence. Players with the most get 1 corruption and 3 M€ production. Players with 2nd most get 1 corruption and 1 M€ production. Min 1 to place. (SOLO: Place 1st with sum of 5 or more.)": "计算腐败点数并加上影响力。腐败值最高的玩家获得1腐败标记和3 M€产量，第二名获得1腐败标记和1 M€产量。需至少1点才能参与排名（单人模式：总和≥5时视为第一名）",
+  "Lose 3 M€ per corruption resource you have (max 5), minus influence. Players with 0 corruption gain 1 TR.": "每有1个腐败标记损失3 M€（最多5个），减去影响力值。腐败标记为0的玩家获得1点改造度(TR)",
+  "Gain 1 M€ production (max 5) for every 2 excavation markers you own. Each point of influence counts as an extra excavation marker.": "每拥有2个挖掘标记提升1级M€产量（最多5级），每点影响力视作1个额外挖掘标记",
+  "Discard all unclaimed underground resources. Lose 2 M€ for each tile on Mars you own WITHOUT excavation markers (max 5) minus influence.": "弃置所有未认领的地下资源。每拥有1个无挖掘标记的火星板块损失2 M€（最多计算5个），减去影响力值",
+
+  "Discard 2 cards from hand. Gain 2 M€ per influence.": "从手牌中弃置2张卡牌。每拥有1点影响力，获得2 M€",
+  "Gain 2 M€ per Venus tag (max 5) and influence.": "每拥有1个金星标志（最多5个）和每点影响力，各获得2 M€",
+  "Gain 1 plant per plant production (max 5) and influence.": "每拥有1级植物产量（最多5级）和每点影响力，各获得1个植物资源",
+  "Gain 1 M€ for each card in hand (no limit) and influence.": "每有1张手牌（无上限）和每点影响力，各获得1 M€",
+  "First player places an ocean tile. Gain 1 plant and 1 steel per influence.": "起始玩家放置1个海洋板块。每点影响力获得1个植物资源和1个钢铁资源",
+  "Gain 1 titanium for each Jovian tag (max 5) and influence.": "每拥有1个木星标志（最多5个）和每点影响力，各获得1个钛资源",
+  "Gain 2 M€ for each event played (max 5) and influence.": "每打出1张事件卡（最多5张）和每点影响力，各获得2 M€",
+  "Add a floater to each card that can collect floaters. Add 1 floater for each influence to a card.": "在所有可收集浮游体的卡牌上各添加1个浮游体。每点影响力可向任意1张卡牌添加1个浮游体",
+  "Lose 2 floaters from a card or 10 M€. Draw 1 card for each influence.": "从1张卡牌移除2个浮游体或支付10 M€。每点影响力抽取1张卡牌",
+  "Gain 10 M€ if you have 9 or more different tags. Influence counts as unique tags.": "若不同种类标志数量加上影响力值≥9，则获得10 M€",
+  "First player removes 1 ocean tile from the gameboard. Gain 1 standard resource per influence.": "起始玩家从版图移除1个海洋板块。每点影响力获得1个标准资源（自选类型）",
+  "Lose all plants except 3 + influence.": "保留3+影响力数量的植物资源，弃置其余所有植物资源",
+  "Count your influence plus building tags and city tiles (no limits). The player with most (or 10 in solo) gains 2 TR, the 2nd (or 5 in solo) gains 1 TR (ties are friendly).": "计算影响力、建筑标志与城市板块的总和（无上限）。点数最高的玩家获得2改造度(TR)（单人模式：≥10点时获得），第二名获得1改造度(TR)（单人模式：≥5点时获得），同分玩家均可获得",
+  "Gain 2 M€ for each influence and set of 5 TR over 15 (max 5 sets).": "每点影响力和每满5点超过15的改造度(TR)（最多5组），各获得2 M€",
+  "Lose all heat. Lose 2 M€ for each building tag (max 5, then reduced by influence).": "失去所有热能。每拥有1个建筑标志损失2 M€（最多计算5个，每点影响力少算1个标志）",
+  "Gain 2 M€ for each Earth tag (max 5) and influence.": "每拥有1个地球标志（最多5个）和每点影响力，各获得2 M€",
+  "Increase energy production 1 step per 2 power tags (no limit). Influence counts as power tags.": "每2个电力标志提升1级能源产量（无上限），影响力可视为电力标志",
+  "Gain 2 M€ for each space tag (max 5) and influence.": "每拥有1个太空标志（最多5个）和每点影响力，各获得2 M€",
+  "Increase M€ production 1 step for each colony. Gain 1 titanium for each influence.": "每拥有1个殖民地提升1级M€产量。每点影响力获得1个钛资源",
+  "Lose 1 titanium for each Jovian tag (max 5, then reduced by influence).": "每拥有1个木星标志损失1个钛资源（最多计算5个，每点影响力少算1个）",
+  "Lose 4 M€ for each tile adjacent to ocean (max 5, then reduced by influence).": "每拥有1个与海洋相邻的板块损失4 M€（最多计算5个，每点影响力少算1个）",
+  "Lose 3 M€ for each building tag (max 5, then reduced by influence).": "每拥有1个建筑标志损失3 M€（最多计算5个，每点影响力少算1个）",
+  "Gain 1 steel for each steel production (max 5) and influence.": "每拥有1级钢铁产量（最多5级）和每点影响力，各获得1个钢铁资源",
+  "Lose 3 M€ for each set of 5 TR over 10 (max 5 sets). Increase M€ production 1 step per influence.": "每满5点超过10的改造度(TR)（最多5组）损失3 M€，每点影响力提升1级M€产量",
+  "Count Earth tags and ADD(!) influence. The player(s) with most (at least 1) loses 2 TR, and 2nd most (at least 1) loses 1 TR. SOLO: Lose 2 TR if the sum is 4 or more.": "计算地球标志数量与影响力之和！最高者（至少1点）失去2改造度(TR)，次高者（至少1点）失去1改造度(TR)（单人模式：合计≥4时失去2 TR）",
+  "Lose 4 M€ for each city tile (max 5, then reduced by influence).": "每拥有1个城市板块损失4 M€（最多计算5个，每点影响力少算1个）",
+  "Decrease steel and energy production 1 step each. Gain 1 steel per influence.": "钢铁和能源产量各降低1级，每点影响力获得1个钢铁资源",
+  "Decrease temperature 2 steps. Draw 1 card per influence.": "温度降低2级，每点影响力抽取1张卡牌",
+  "Lose 3 M€ for each space tag (max 5, then reduced by influence).": "每拥有1个太空标志损失3 M€（最多计算5个，每点影响力少算1个）",
+  "Lose 3 M€ for each blue card (max 5, then reduced by influence).": "每打出1张蓝色卡牌损失3 M€（最多计算5张，每点影响力少算1张）",
+  "Lose 3 M€ for each colony (max 5, then reduced by influence).": "每拥有1个殖民地损失3 M€（最多计算5个，每点影响力少算1个）",
+  "Gain 2 M€ for each science tag (max 5) and influence.": "每拥有1个科学标志（最多5个）和每点影响力，各获得2 M€",
+  "All cards with resources on them gain 1 resource. Draw 1 card for each influence.": "所有带有资源的卡牌各获得1个资源，每点影响力抽取1张卡牌",
+  "Gain 2 M€ for each city tile (max 5) and influence.": "每拥有1个城市板块（最多5个）和每点影响力，各获得2 M€",
+  "Increase temperature 2 steps. Increase heat production 1 step per influence.": "温度提升2级，每点影响力提升1级热能产量",
+  "Reduce TR 4 steps. Each influence prevents 1 step.": "降低最多4改造度(TR)，每点影响力可抵消1级降低",
+  "Draw 1 card for each party leader (max 5) and influence.": "每拥有1个派系领袖（最多5个）和每点影响力，各抽取1张卡牌",
+  "Gain 2M€ for each Mars tag you have (max 5) and influence.": "每拥有1个火星标志（最多5个）和每点影响力，各获得2 M€",
+  "Increase your M€ production 1 step for every special tile you own (max 5.) Gain 1 energy for every influence you have": "每拥有1个特殊板块提升1级M€产量（最多5级）。每点影响力获得1个能源资源",
+  "Pay 10M€, reduced by 1M€ per influence. Raise every planetary track 2 steps. Nobody gains the \"rising player\" bonus.": "支付10 M€（每点影响力减少1 M€），将所有行星轨道推进2格，且不触发「推进者」奖励",
+  "Lose 1 plant for each Earth tag you own (max 5) then reduced by influence.": "每拥有1个地球标志损失1个植物资源（最多5个），每点影响力减少1个损失",
+  "Lower the temperature and oxygen 2 steps each. (-4C, -2% O2)": "温度降低2级（-4°C），氧气浓度降低2级（-2%）",
+  "Pay 10M€. Add 2 data to EVERY data card. Add 1 data to any data card for each influence you have.": "支付10 M€。所有数据卡添加2个数据标记，每点影响力可向任意数据卡再添加1个数据标记",
+
+  "Seismic Predictions": "地震预测",
+  "Migration Underground": "地下迁移",
+  "Media Stir": "媒体炒作",
+  "Lagging Regulation": "监管滞后",
+  "Fair Trade Complaint": "公平贸易申诉",
+  "Diaspora": "侨民",
+  "Sponsored Projects": "赞助项目",
+  "Generous Funding": "慷慨资助",
+  "Successful Organisms": "成功生物体",
+  "Productivity": "生产力提升",
+  "Homeworld Support": "母星支持",
+  "Volcanic Eruptions": "火山爆发",
+  "Diversity": "多样性倡议",
+  "Improved Energy Templates": "能源模板改进",
+  "Celebrity Leaders": "名人领袖",
+  "Spin-Off Products": "衍生产品",
+  "Election": "大选",
+  "Aquifer Released by Public Council": "公共委员会开放含水层",
+  "Scientific Community": "科学共同体",
+  "Strong Society": "强健社会",
+  "Global Dust Storm": "全球沙尘暴",
+  "Eco Sabotage": "生态破坏",
+  "Miners On Strike": "矿工罢工",
+  "Mud Slides": "泥石流",
+  "Revolution": "革命运动",
+  "Riots": "暴乱事件",
+  "Sabotage": "蓄意破坏",
+  "Snow Cover": "积雪覆盖",
+  "Pandemic": "全球疫情",
+  "War on Earth": "地球战争",
+  "Paradigm Breakdown": "范式崩解",
+  "Dry Deserts": "干旱荒漠化",
+  "Red Influence": "红色渗透",
+  "Solarnet Shutdown": "太阳网关闭",
+  "Solar Flare": "太阳耀斑",
+  "Jovian Tax Rights": "木星征税权",
+  "Microgravity Health Problems": "微重力健康问题",
+  "Cloud Societies": "云端社会",
+  "Corrosive Rain": "腐蚀性酸雨",
+  "Venus Infrastructure": "金星基建",
+  "Leadership Summit": "领袖峰会",
+  "Balanced Development": "平衡发展",
+  "Space Race to Mars": "火星竞赛",
+  "Constant Struggle": "持续抗争",
+  "Tired Earth": "疲惫地球",
+  "Magnetic Field Stimulation Delays": "磁场激发延迟",
+  "Communication Boom": "通信大爆发",
+  "x": "x",
+  "w/rsrs": "w/rsrs",
+  "over 15": "over 15",
+  "over 10": "over 10",
+  "over 6": "over 6",
+  "1st:": "1st:",
+  "2nd:": "2nd:",
+  "1st/2nd": "1st/2nd",
+  "Lose all": "Lose all",
+  "max 3": "max 3",
+  "MAX 6": "MAX 6",
+  "OR": "OR"
 }
