--- a/src/locales/cn/prelude2_cards.json
+++ b/src/locales/cn/prelude2_cards.json
@@ -1,84 +1,84 @@
 {
-    "Ceres Tech Market": "谷神星科技市场",
-    "Action: Discard any number of cards from your hand to gain 2 M€ for each discarded card.": "行动：弃置任意数量手牌，每弃置1张获得2M€",
-    "Gain 2 M€ per colony you own.": "你拥有的每个殖民地获得2M€",
+  "Ceres Tech Market": "谷神星科技市场",
+  "Action: Discard any number of cards from your hand to gain 2 M€ for each discarded card.": "行动：弃置任意数量手牌，每弃置1张获得2M€",
+  "Gain 2 M€ per colony you own.": "你拥有的每个殖民地获得2M€",
 
-    "Cloud Tourism": "云层观光",
-    "Increase your M€ production 1 step for each pair of Earth and Venus tags you own. 1 VP for every 3rd floater on this card.": "每拥有1对地球+金星标签，提升1级M€产能。此卡每有3个云资源获得1VP",
+  "Cloud Tourism": "云层观光",
+  "Increase your M€ production 1 step for each pair of Earth and Venus tags you own. 1 VP for every 3rd floater on this card.": "每拥有1对地球+金星标签，提升1级M€产能。此卡每有3个云资源获得1VP",
 
-    "Colonial Envoys": "殖民特使",
-    "Requires that Unity is ruling or that you have 2 delegates there. Place 1 delegate for each colony you have. YOU MAY PLACE THEM IN SEPERATE PARTIES.": "需求：联合党执政或在此派系有2名代表。为你拥有的每个殖民地放置1名代表（可分配至不同派系）",
+  "Colonial Envoys": "殖民特使",
+  "Requires that Unity is ruling or that you have 2 delegates there. Place 1 delegate for each colony you have. YOU MAY PLACE THEM IN SEPERATE PARTIES.": "需求：联合党执政或在此派系有2名代表。为你拥有的每个殖民地放置1名代表（可分配至不同派系）",
 
-    "Colonial Representation": "殖民代表权",
-    "Effect: You have +1 influence.": "效果：获得+1影响力",
-    "Gain 3 M€ per colony you have.": "你拥有的每个殖民地获得3M€",
+  "Colonial Representation": "殖民代表权",
+  "Effect: You have +1 influence.": "效果：获得+1影响力",
+  "Gain 3 M€ per colony you have.": "你拥有的每个殖民地获得3M€",
 
-    "Envoys From Venus": "金星特使团",
-    "Requires 3 Venus tags. Place 2 delegates in 1 party.": "需求3个金星标签。在1个派系放置2名代表",
+  "Envoys From Venus": "金星特使团",
+  "Requires 3 Venus tags. Place 2 delegates in 1 party.": "需求3个金星标签。在1个派系放置2名代表",
 
-    "Floating Refinery": "浮空精炼厂",
-    "Action: Add 1 floater here.": "行动：在此卡添加1个云资源",
-    "Action: Remove 2 floaters from ANY CARD to gain 1 titanium and 2 M€.": "行动：从任意卡牌移除2个云资源，获得1钛和2M€",
-    "Add 1 floater here for each Venus tag you have.": "你拥有的每个金星标签在此卡添加1个云资源",
+  "Floating Refinery": "浮空精炼厂",
+  "Action: Add 1 floater here.": "行动：在此卡添加1个云资源",
+  "Action: Remove 2 floaters from ANY CARD to gain 1 titanium and 2 M€.": "行动：从任意卡牌移除2个云资源，获得1钛和2M€",
+  "Add 1 floater here for each Venus tag you have.": "你拥有的每个金星标签在此卡添加1个云资源",
 
-    "Frontier Town": "边疆城镇",
-    "Requires that Mars First is ruling or that you have 2 delegates there. Decrease your energy production one step. Place a city tile. GAIN THE PRINTED PLACEMENT BONUS 2 ADDITIONAL TIMES.": "需求：火星优先党执政或在此派系有2名代表。降低1级能量产能。放置城市板块（可获得2次板块放置奖励）",
+  "Frontier Town": "边疆城镇",
+  "Requires that Mars First is ruling or that you have 2 delegates there. Decrease your energy production one step. Place a city tile. GAIN THE PRINTED PLACEMENT BONUS 2 ADDITIONAL TIMES.": "需求：火星优先党执政或在此派系有2名代表。降低1级能量产能。放置城市板块（可获得2次板块放置奖励）",
 
-    "GHG Shipment": "温室气体运输",
-    "Requires that Kelvinists are in power or that you have 2 delegates there. Increase your heat production 1 step. Gain 1 heat for each floater you have.": "需求：开尔文党执政或在此派系有2名代表。提升1级热量产能，你拥有的每个云资源获得1热量",
+  "GHG Shipment": "温室气体运输",
+  "Requires that Kelvinists are in power or that you have 2 delegates there. Increase your heat production 1 step. Gain 1 heat for each floater you have.": "需求：开尔文党执政或在此派系有2名代表。提升1级热量产能，你拥有的每个云资源获得1热量",
 
-    "Ishtar Expedition": "伊什塔尔远征",
-    "Requires Venus 10%. Gain 3 titanium and draw 2 Venus cards.": "需求金星参数≥10%。获得3钛并抽取2张金星卡牌",
+  "Ishtar Expedition": "伊什塔尔远征",
+  "Requires Venus 10%. Gain 3 titanium and draw 2 Venus cards.": "需求金星参数≥10%。获得3钛并抽取2张金星卡牌",
 
-    "Jovian Envoys": "木星特使团",
-    "Requires 2 Jovian tags. Place 2 delegates in 1 party.": "需求2个木星标签。在1个派系放置2名代表",
+  "Jovian Envoys": "木星特使团",
+  "Requires 2 Jovian tags. Place 2 delegates in 1 party.": "需求2个木星标签。在1个派系放置2名代表",
 
-    "L1 Trade Terminal": "L1贸易终端",
-    "Effect: When you trade, first increase that colony tile track 2 steps.": "效果：进行贸易时，首先提升该殖民地轨道2格",
-    "Add a resource to 3 different cards that already have resources.": "向3张已有资源的卡牌各添加1个资源",
+  "L1 Trade Terminal": "L1贸易终端",
+  "Effect: When you trade, first increase that colony tile track 2 steps.": "效果：进行贸易时，首先提升该殖民地轨道2格",
+  "Add a resource to 3 different cards that already have resources.": "向3张已有资源的卡牌各添加1个资源",
 
-    "Microgravity Nutrition": "微重力营养学",
-    "Increase your M€ production 1 step for each colony you have.": "你拥有的每个殖民地提升1级M€产能",
+  "Microgravity Nutrition": "微重力营养学",
+  "Increase your M€ production 1 step for each colony you have.": "你拥有的每个殖民地提升1级M€产能",
 
-    "Red Appeasement": "红色绥靖政策",
-    "Requires that Reds are ruling or that you have 2 delegates there, AND THAT NO OTHER PLAYER HAS PASSED.": "需求：红党执政或在此派系有2名代表，且没有其他玩家已跳过",
-    "Increase M€ production 2 steps. This counts as passing. You get no other turns this generation.": "提升2级M€产能。此行动视为跳过，本世代不再获得行动回合",
-    "PASS": "跳过",
+  "Red Appeasement": "红色绥靖政策",
+  "Requires that Reds are ruling or that you have 2 delegates there, AND THAT NO OTHER PLAYER HAS PASSED.": "需求：红党执政或在此派系有2名代表，且没有其他玩家已跳过",
+  "Increase M€ production 2 steps. This counts as passing. You get no other turns this generation.": "提升2级M€产能。此行动视为跳过，本时代不再获得行动回合",
+  "PASS": "跳过",
 
-    "Soil Studies": "土壤研究",
-    "steal": "偷取",
-    "Requires that temperature is -4 C or lower. Gain 1 plant per Venus tag, plant tag, and colony you have.": "需求温度≤-4°C。你拥有的每个金星标签/植物标签/殖民地各获得1植物",
+  "Soil Studies": "土壤研究",
+  "steal": "偷取",
+  "Requires that temperature is -4 C or lower. Gain 1 plant per Venus tag, plant tag, and colony you have.": "需求温度≤-4°C。你拥有的每个金星标签/植物标签/殖民地各获得1植物",
 
-    "Special Permit": "特别许可证",
-    "Requires that Greens are ruling or that you have 2 delegates there. Steal 4 plants from any player.": "需求：绿党执政或在此派系有2名代表。从任意玩家偷取4植物",
+  "Special Permit": "特别许可证",
+  "Requires that Greens are ruling or that you have 2 delegates there. Steal 4 plants from any player.": "需求：绿党执政或在此派系有2名代表。从任意玩家偷取4植物",
 
-    "Sponsoring Nation": "赞助国",
-    "Requires 4 Earth tags. Gain 3 TR. Place 2 delegates.": "需求4个地球标签。获得3TR。放置2名代表",
+  "Sponsoring Nation": "赞助国",
+  "Requires 4 Earth tags. Gain 3 TR. Place 2 delegates.": "需求4个地球标签。获得3TR。放置2名代表",
 
-    "Stratospheric Expedition": "平流层远征",
-    "Add two floaters to ANY CARD. Draw 2 Venus cards.": "向任意卡牌添加2个云资源。抽取2张金星卡牌",
+  "Stratospheric Expedition": "平流层远征",
+  "Add two floaters to ANY CARD. Draw 2 Venus cards.": "向任意卡牌添加2个云资源。抽取2张金星卡牌",
 
-    "Summit Logistics": "峰会物流",
-    "Requires that Scientists are ruling or that you have 2 delegates there. Gain 1 M€ per planet tag and colony you have. Draw 2 cards.": "需求：科学家党执政或在此派系有2名代表。每个行星标签和殖民地各获得1M€。抽取2张卡牌",
-    "FAN EXPANSION NOTE: This includes Mars but not The Moon.": "扩展说明：包含火星但不包含月球",
+  "Summit Logistics": "峰会物流",
+  "Requires that Scientists are ruling or that you have 2 delegates there. Gain 1 M€ per planet tag and colony you have. Draw 2 cards.": "需求：科学家党执政或在此派系有2名代表。每个行星标签和殖民地各获得1M€。抽取2张卡牌",
+  "FAN EXPANSION NOTE: This includes Mars but not The Moon.": "扩展说明：包含火星但不包含月球",
 
-    "Unexpected Application": "意外应用",
-    "Discard 1 card to terraform Venus 1 step.": "弃置1张卡牌以提升1级金星改造度",
+  "Unexpected Application": "意外应用",
+  "Discard 1 card to terraform Venus 1 step.": "弃置1张卡牌以提升1级金星改造度",
 
-    "Venus Allies": "金星同盟",
-    "Raise Venus 2 steps. Gain 4 M€ per colony you have.": "提升2级金星改造度。你拥有的每个殖民地获得4M€",
+  "Venus Allies": "金星同盟",
+  "Raise Venus 2 steps. Gain 4 M€ per colony you have.": "提升2级金星改造度。你拥有的每个殖民地获得4M€",
 
-    "Venus Orbital Survey": "金星轨道勘测",
-    "Action: Reveal the top 2 cards, take any venus cards to hand for free. Any other card you either buy or discard": "行动：展示牌库顶2张卡牌，免费获取其中金星卡牌，其他卡牌可选择购买或弃置",
+  "Venus Orbital Survey": "金星轨道勘测",
+  "Action: Reveal the top 2 cards, take any venus cards to hand for free. Any other card you either buy or discard": "行动：展示牌库顶2张卡牌，免费获取其中金星卡牌，其他卡牌可选择购买或弃置",
 
-    "Venus Shuttles": "金星穿梭机",
-    "Action: Spend 12 M€ to raise Venus 1 step. This cost is REDUCED BY 1 FOR EACH VENUS TAG you have.": "行动：支付12M€提升1级金星改造度（你拥有的每个金星标签减少1M€费用）",
-    "Add 2 floaters to ANY VENUS CARD.": "向任意金星卡牌添加2个云资源",
+  "Venus Shuttles": "金星穿梭机",
+  "Action: Spend 12 M€ to raise Venus 1 step. This cost is REDUCED BY 1 FOR EACH VENUS TAG you have.": "行动：支付12M€提升1级金星改造度（你拥有的每个金星标签减少1M€费用）",
+  "Add 2 floaters to ANY VENUS CARD.": "向任意金星卡牌添加2个云资源",
 
-    "Venus Trade Hub": "金星贸易枢纽",
-    "Effect: When you trade, gain 3 M€.": "效果：进行贸易时获得3M€",
-    "Requires 2 Venus tags.": "需求2个金星标签",
+  "Venus Trade Hub": "金星贸易枢纽",
+  "Effect: When you trade, gain 3 M€.": "效果：进行贸易时获得3M€",
+  "Requires 2 Venus tags.": "需求2个金星标签",
 
-    "WG Project": "世界政府项目",
-    "Requires that you are Chairman. DRAW 3 PRELUDE CARDS AND PLAY 1 OF THEM, Discard the other 2.": "需求成为主席。抽取3张前序卡牌并打出其中1张，弃置其余2张"
+  "WG Project": "世界政府项目",
+  "Requires that you are Chairman. DRAW 3 PRELUDE CARDS AND PLAY 1 OF THEM, Discard the other 2.": "需要成为主席。抽取3张前序卡牌并打出其中1张，弃置其余2张"
 }
