--- a/src/locales/cn/venus_next.json
+++ b/src/locales/cn/venus_next.json
@@ -25,7 +25,7 @@
 
   "Viron":"病毒研究",
   "VIRON":"病毒研究",
-  "Action: Use a blue card action that has already been used this generation.":"行动：选择一张本世代已执行行动的蓝色卡牌，再次执行该行动。",
+  "Action: Use a blue card action that has already been used this generation.":"行动：选择一张本时代已执行行动的蓝色卡牌，再次执行该行动。",
   "You start with 48 M€.":"起始获得48 M€",
 
   "% Venus":"% 金星改造度",
@@ -41,7 +41,6 @@
   "Action: Add 1 microbe to ANY card.":"行动：放置1个微生物到任意卡牌",
   "Requires 2 science tags.":"需要至少2个科学标志",
   "1 VP for every 3rd Microbe on this card.":"每有3个微生物资源,获得1分",
-
 
   "Mining Quota":"采矿配额",
   "Requires Venus, Earth and Jovian tags. Increase your steel production 2 steps.":"需要有金星、木星、地球标志各1个。提升你的钢铁产量2级",
@@ -60,7 +59,6 @@
 
   "Venus Waystation":"金星中转站",
   "Effect: When you play a Venus tag, you pay 2 M€ less for it.":"效果： 当你打出一个带有金星标志的牌,你可以少花费2 M€",
-
 
   "Action: Add 1 resource to ANOTHER VENUS CARD).":"行动：放置1个资源到其它金星卡牌",
   "Requires Venus 12%. Decrease your energy production 1 step.)":"需要金星改造度至少12%。降低你的电力产量1级",
@@ -102,7 +100,7 @@
   "Action: Spend 1 titanium to add 2 floaters here":"行动：花费1个钛金属在本牌上增加2个云资源",
   "Action: Spend 2 floaters here to raise Venus 1 step":"行动：从本牌移除2个资源提升金星改造度一级。",
 
-  "Spin-Inducing Asteroid":"自旋牵引陨石",
+  "Spin-Inducing Asteroid":"自旋牵引小行星",
   "Venus must be 10% or lower. Raise Venus 2 steps.":"金星改造度需要小于等于10%。提升金星改造度2级。",
 
   "Dirigibles":"悬浮艇",
@@ -113,7 +111,6 @@
   "Action: Spend 2 M€ to add 1 floater to ANY card":"行动：花费2 M€并在任意一张牌上增加一个云资源",
   "Requires 2 science tags. 1 VP for every 2nd Floater on this card).":"需要你至少有2个科学标志。",
   "1 VP for every 2nd Floater on this card.":"本牌每2个云资源价值1分。",
-
 
   "Hydrogen to Venus":"输送氢气到金星",
   "Raise Venus 1 step. Add 1 floater to A VENUS CARD for each Jovian tag you have.":"提升金星改造度1级。你每有1个木星标志,放置1个云资源到一张带有金星标志的牌",
@@ -133,7 +130,6 @@
 
   "GHG Import From Venus":"从金星导入温室气体",
   "Raise Venus 1 step. Increase your heat production 3 steps.":"提升金星改造度1级。提升你的热能产量3级",
-
 
   "Aerial Mappers":"航空制图器",
   "Action: Add floater to ANY card.":"行动：放置1个云资源到任意卡牌上",
@@ -210,7 +206,6 @@
   "Action: Add 1 resource to ANOTHER VENUS CARD.":"行动：放置1个资源到任意带有金星标志的卡牌上",
   "Requires Venus 12%. Decrease your energy production 1 step. Place a city tile ON THE RESERVED AREA.":"需要金星改造度达到12%才能打出。减少1点电力产量。放置一个城市板块到保留区。",
 
-
   "max 14% Venus":"金星改造度≤14%",
   "Action: spend 6 M€ to add an asteroid resource to this card (TITANIUM MAY BE USED), or spend 1 resource from this card to increase Venus 1 step":"行动：支付6 M€以放置1个小行星资源到本卡上（可以使用钛资源支付），或移除本卡上1个小行星资源以提升金星改造度1级。",
   "Venus must be 14% or lower":"金星改造度≤14%",
@@ -257,7 +252,6 @@
   "Luxury Foods":"奢靡大餐",
   "Requires that you have a Venus tag, an Earth tag and a Jovian tag.":"要求你有一个金星标签，一个地球标签和一个木星标签。",
 
-
   "Neutralizer Factory":"中和剂工厂",
   "Requires Venus 10%. Increase the Venus track 1 step.":"需要金星改造度达到10%才能打出。提升金星改造度1级。",
 
@@ -265,7 +259,4 @@
   "Raise Venus 2 steps. Increase your heat production 2 steps.":"提升金星改造度2级。提升2点热产量。",
 
   "Requires Venus, Earth and Jovian tags. Increase your steel production 2 steps":"需要你拥有金星、地球和木星标志才能打出。提升2点钢铁产量。"
-
-
-
 }
