feat: 支持公司卡（Corporation Card）轮抽，泛型化 Draft 类型并添加相关 UI 配置项
- 将 Draft 类型泛型化，支持不同卡牌类型（如 ICorporationCard），并通过 useGeneric 标志区分使用原始字段或泛型字段；

- 原 draft 逻辑仅支持 IProjectCard（包括其子类 IPreludeCard），本次修改将泛型参数放宽为 ICard，并根据类型区分项目卡与公司卡的 draft 流程，以兼容 ICorporationCard 的使用。

- 实现 corporation 类型的轮抽流程，完整支持多轮传牌、卡牌选择与落牌；

- 为 IPlayer 添加泛型字段 genericDraftHand 和 genericDraftedCards，用于存储不同类型轮抽数据；

- 在 CreateGameForm.vue 添加“公司轮抽变体（Corporation Draft variant）”复选框，用于开启公司轮抽功能；

- 扩展 NewGameConfig、CreateGameModel 和 GameOptionsModel，添加用于控制公司轮抽的布尔配置项；

类型继承关系：
ICard
├── IProjectCard
│ └── IPreludeCard
└── ICorporationCard

--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -69,6 +69,7 @@
   "Custom Preludes list": "自定义前序卡列表",
   "World Government Terraforming": "世界政府",
   "Draft variant": "轮抽变体",
+  "Corporation Draft variant": "公司轮抽变体",
   "Prelude Draft variant": "前序轮抽变体",
   "Initial Draft variant": "初始轮抽变体",
   "Initial Draft rounds": "初始轮抽轮次",
