--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -208,7 +208,7 @@
   "Banker": "金融巨头",
   "Have the most M€ production": "拥有最高M€产能",
   "Scientist": "科学家",
-  "Have the most science tags in play": "使用最多科学标签",
+  "Have the most science tags in play": "拥有最多科学标签",
   "Thermalist": "热能专家",
   "Have the most heat": "拥有最多热量资源",
   "Miner": "矿业大亨",
@@ -216,15 +216,15 @@
   "Cultivator": "绿化妙手",
   "Own the most greenery tiles": "拥有最多绿化板块",
   "Magnate": "自动化巨头",
-  "Have the most automated (green) project cards in play": "使用最多自动化（绿色）项目卡",
+  "Have the most automated (green) project cards in play": "拥有最多自动化（绿色）项目卡",
   "Space Baron": "太空枭雄",
-  "Have the most space tags in play": "使用最多太空标签",
+  "Have the most space tags in play": "拥有最多太空标签",
   "Excentric": "特立独行",
   "Have the most resources on cards in play": "卡牌上拥有最多资源",
   "Contractor": "营造巨贾",
-  "Have the most building tags in play": "使用最多建筑标签",
+  "Have the most building tags in play": "拥有最多建筑标签",
   "Celebrity": "名媛雅士",
-  "Have the most project cards in play with a base cost of at least 20 M€ (not events.)": "使用最多基础成本≥20M€的项目卡（非事件）",
+  "Have the most project cards in play with a base cost of at least 20 M€ (not events.)": "拥有最多基础成本≥20M€的项目卡（非事件）",
   "Industrialist": "实业家",
   "Desert Settler": "沙漠定居者",
   "Own the most tiles south of the equator (the four bottom rows)": "赤道以南拥有最多板块（底部四行）",
@@ -233,13 +233,13 @@
   "Benefactor": "火星改造王",
   "Have the highest terraform rating": "拥有最高改造等级（TR）",
   "Venuphile": "金星爱好者",
-  "Have the most Venus tags in play": "使用最多金星标签",
+  "Have the most Venus tags in play": "拥有最多金星标签",
   "Entrepreneur": "企业家",
   "Own the most tiles that grant adjacency bonuses": "拥有最多提供相邻加成的板块",
   "Lunar Magnate": "月球大亨",
   "Own the most tiles on The Moon": "在月球拥有最多板块",
   "Full Moon": "满月",
-  "Have the most Moon tags in play": "使用最多月球标签",
+  "Have the most Moon tags in play": "拥有最多月球标签",
   "Cosmic Settler": "宇宙移民",
   "Own the most cities not on Mars": "在非火星区域拥有最多城市",
   "Botanist": "植物学家",
@@ -249,25 +249,25 @@
   "Zoologist": "动物学家",
   "Have the most animal resources": "拥有最多动物资源",
   "A. Manufacturer": "A类制造商",
-  "Have the most active (blue) project cards in play": "使用最多主动（蓝色）项目卡",
+  "Have the most active (blue) project cards in play": "拥有最多主动（蓝色）项目卡",
   "Curator": "馆长",
   "Have the most tags of any one type in play": "拥有某一类型的最多标志",
   "A. Engineer": "A类工程师",
-  "Have the most cards in play that directly alter your own production": "使用最多直接影响产能的卡牌",
+  "Have the most cards in play that directly alter your own production": "拥有最多直接影响产能的卡牌",
   "Tourist": "游客",
   "Have the most empty spaces adjacent to your tiles": "拥有最多相邻空地的板块",
   "A. Zoologist": "A类动物学家",
   "Own the most animal and microbe resources": "拥有最多动物和微生物资源",
   "Biologist": "生物学家",
-  "Have the most animal, plant, and microbe tags in play": "使用最多动物/植物/微生物标签",
+  "Have the most animal, plant, and microbe tags in play": "拥有最多动物/植物/微生物标签",
   "T. Politician": "T类政客",
   "Place the most delegates": "拥有最多放置的代表数量",
   "Urbanist": "城市规划师",
   "Have the most VP from city tile adjacencies on Mars": "通过火星城市相邻获得最多VP",
   "Warmonger": "战争贩子",
-  "Play the most cards that reduce other players' resources or production": "使用最多削减其他玩家资源/产能的卡牌",
+  "Play the most cards that reduce other players' resources or production": "拥有最多削减其他玩家资源/产能的卡牌",
   "Forecaster": "预言家",
-  "Have the most cards with requirements in play": "使用最多有条件限制的卡牌",
+  "Have the most cards with requirements in play": "拥有最多有条件限制的卡牌",
   "Edgedancer": "边缘舞者",
   "Own the most tiles on the edges of the board": "在版图边缘拥有最多板块",
   "Visionary": "远见者",
@@ -275,9 +275,9 @@
   "Naturalist": "自然主义者",
   "Have the most plant and heat production": "拥有最高植物与热量产能总和",
   "Voyager": "远征者",
-  "Have the most Jovian tags in play": "使用最多木星标签",
+  "Have the most Jovian tags in play": "拥有最多木星标签",
   "Kingpin": "首脑",
-  "Play the highest number of cards with a corruption requirement of at least 1. (Event cards count)": "使用最多需要≥1腐败的卡牌（含事件卡）",
+  "Play the highest number of cards with a corruption requirement of at least 1. (Event cards count)": "拥有最多需要≥1腐败的卡牌（含事件卡）",
   "EdgeLord": "边缘舞者",
   "Have the highest number of excavation markers on the edges of the board.": "版图边缘拥有最多挖掘标记",
   "Rugged": "硬汉",
@@ -289,13 +289,13 @@
   "Constructor": "建造师",
   "Have the most Colonies and Cities combined": "殖民地与城市总数最多",
   "Electrician": "电气技师",
-  "Have the most power tags in play.": "使用最多电力标签",
+  "Have the most power tags in play.": "拥有最多电力标签",
   "Founder": "奠基者",
   "Have the most tiles adjacent to special tiles.": "拥有最多与特殊板块相邻的板块",
   "Highlander": "高地人",
   "Own the most tiles that are NOT adjacent to ocean tiles": "拥有最多不邻接海洋的板块",
   "Incorporator": "整合者",
-  "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "使用最多基础成本≤10M€的项目卡（非事件）",
+  "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "拥有最多基础成本≤10M€的项目卡（非事件）",
   "Investor": "投资者",
   "Have the most Earth tags in play": "拥有最多地球标签",
   "Landscaper": "园林师",
