--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -47,6 +47,11 @@
   "You start with 10 steel and 1 worker.": "起始获得10钢铁和1个工人。",
   "Effect: When you play a project card and pay 2 or more steel, place 1 worker on this card.": "效果：当你打出项目卡且支付≥2钢铁时，在此卡上放置1个工人。",
   "Effect: For every 2 workers, reduce the cost of building- or space-tagged cards you play by 1 M€.": "效果：每有2个工人，你打出的建筑或太空标志牌减1 M€。",
-  "${0} paid ${1} steel and added 1 worker to ${2}.": "${0} 支付了 ${1} 钢铁，并在 ${2} 上放置了1个工人。"
+  "${0} paid ${1} steel and added 1 worker to ${2}.": "${0} 支付了 ${1} 钢铁，并在 ${2} 上放置了1个工人。",
 
+  "Nook Construction": "狸克建设",
+  "NOOK CONSTRUCTION": "狸克建设",
+  "You start with 50 M€ and 2 Bells.": "起始获得50M€和2个铃钱。",
+  "Effect: When you place a special tile on Mars, Gain 1 Bells.": "效果：当你在火星上放置一个特殊板块时，获得1个铃钱。",
+  "Effect: When you place any tile on Mars, Gain 2 + ⌊Bells ÷ 4⌋ M€.": "效果：当你在火星上放置任意板块时，获得 2 + ⌊铃钱 ÷ 4⌋ M€。"
 }
