--- a/src/locales/cn/mingyue_cards.json
+++ b/src/locales/cn/mingyue_cards.json
@@ -40,6 +40,18 @@
   "Select 1 card to keep or none": "选择保留 1 张牌或不保留",
   "${0} kept a card during the action of ${1}.": "${0} 在 ${1} 的行动中保留了一张牌",
   "${0} drew a card due to the action of ${1}.": "${0} 因 ${1} 的行动抽了一张牌",
-  "${0} kept no cards during the action of ${1}.": "${0} 在 ${1} 的行动中未保留任何牌"
+  "${0} kept no cards during the action of ${1}.": "${0} 在 ${1} 的行动中未保留任何牌",
+
+  "Moonlit Warren": "月见兔苑",
+  "Action: Spend up to X plants to add that many animals here. X = ⌊animals / 2⌋": "行动：至多消耗X个植物资源，在此牌上添加等量的动物。X = ⌊动物数量 / 2⌋",
+  "1 VP per 2 animals on this card.": "此牌上每有2个动物资源，获得1分。",
+  "Add 2 animals to this card.": "将2个动物资源放置于此牌上。",
+  "Choose how many plants to spend (max: 1)": "选择要消耗的植物数量（最多：1）",
+  "Choose how many plants to spend (max: 2)": "选择要消耗的植物数量（最多：2）",
+  "Choose how many plants to spend (max: 3)": "选择要消耗的植物数量（最多：3）",
+  "Choose how many plants to spend (max: 4)": "选择要消耗的植物数量（最多：4）",
+  "Choose how many plants to spend (max: 5)": "选择要消耗的植物数量（最多：5）",
+  "Feed": "喂食",
+  "${0} spent ${1} plant(s) to add ${2} animal(s) to ${3}.": "${0} 消耗了 ${1} 个植物资源，将 ${2} 个动物放置到 ${3}上。"
 
 }
