feat: 添加新项目卡牌 MY12 - 微生物反应堆（Microbial Reactor）
- 类型：主动项目卡，费用9，植物与微生物标志，前置条件为2个绿化
- 效果：每当该牌获得资源时，若其上有2的倍数数量的微生物，则自动移除这些资源
- 每2个微生物可转化为2点热量与1点植物产量
- 添加了相关日志与效果文本的中英文翻译

--- a/src/locales/cn/mingyue_cards.json
+++ b/src/locales/cn/mingyue_cards.json
@@ -52,6 +52,10 @@
   "Choose how many plants to spend (max: 4)": "选择要消耗的植物数量（最多：4）",
   "Choose how many plants to spend (max: 5)": "选择要消耗的植物数量（最多：5）",
   "Feed": "喂食",
-  "${0} spent ${1} plant(s) to add ${2} animal(s) to ${3}.": "${0} 消耗了 ${1} 个植物资源，将 ${2} 个动物放置到 ${3}上。"
+  "${0} spent ${1} plant(s) to add ${2} animal(s) to ${3}.": "${0} 消耗了 ${1} 个植物资源，将 ${2} 个动物放置到 ${3}上。",
+
+  "Microbial Reactor": "微生物反应堆",
+  "Effect: For every 2 microbes on this card, remove them to gain 2 heat and 1 plant production.": "效果：此牌上每有2个微生物，移除它们以获得2点热量和1点植物产量。",
+  "${0} removed ${1} microbe(s) from ${2} to gain ${3} heat and increase plant production by ${4}." : "${0}从${2}移除了${1}个微生物，获得了${3}点热量并使植物产量提升了${4}点。"
 
 }
