feat: 添加新项目卡牌 MY14 - 种群扩张（Expansion of Population）
- 类型：自动项目卡，费用 10，植物与动物标签

- 效果：消耗3个植物资源，向一张带有动物标签的卡牌添加3个动物资源

--- a/src/locales/cn/mingyue_cards.json
+++ b/src/locales/cn/mingyue_cards.json
@@ -60,6 +60,9 @@
 
   "Mars Monument": "火星丰碑",
   "Place the Mars Monument tile.": "放置火星丰碑板块。",
-  "Place the Mars Monument tile — a silent monument to humanity’s dream of Terraforming Mars.": "放置火星丰碑板块，献给人类地球化火星梦想的无声纪念。"
+  "Place the Mars Monument tile — a silent monument to humanity’s dream of Terraforming Mars.": "放置火星丰碑板块，献给人类地球化火星梦想的无声纪念。",
+
+  "Expansion Of Population": "种群扩张",
+  "Spend 3 plants to add 3 animals to ANY card.": "消耗3个植物，将3个动物添加到任意一张卡牌上。"
 
 }
