--- a/src/locales/cn/mingyue_cards.json
+++ b/src/locales/cn/mingyue_cards.json
@@ -19,6 +19,7 @@
   "Cannot gain animals by other means.": "不能通过其他方式获得动物资源。",
 
   "Floral Bloom Surge": "卉植繁茂",
+  "Requires 2 plant tags.": "需要2个植物标志。",
   "(Effect: When you play a plant tag card (including this), increase your plant production by 1.)": "（效果：当你打出一张植物志牌时（包括此牌）时，提升1点植物产能。）",
 
   "Ecological Pavilion": "生态展馆",
@@ -32,9 +33,11 @@
   "${0} rolled ${1} and gained ${2} M€ from ${3}.": "${0} 掷出 ${1}，获得了 ${2} M€(来自 ${3})。",
 
   "Artifact Harvest": "奇物丰收",
-  "Requires 7 oceans. Gain 1 plants for each type of non-standard resource you have (up to 7 types counted).": "需要7片海洋。你每拥有1种非标准资源，获得1植物（最多计入7种资源）。",
+  "Requires 7 ocean tiles.": "需要7片海洋。",
+  "Gain 1 plants for each type of non-standard resource you have (up to 7 types counted).": "你每拥有1种非标准资源，获得1植物（最多计入7种资源）。",
 
   "Divergencies Assort": "分歧的交汇点",
+  "Requires 2 science tags.": "需要2个科学标志。",
   "(Action: Draw the top 2 cards of the deck. Keep at most 1 of them.)": "（行动：抽取牌堆顶两张牌，保留其中至多一张。）",
   "If you kept any, all other players draw 1 card.": "若你保留了卡牌，其余所有玩家各抽 1 张牌",
   "Select 1 card to keep or none": "选择保留 1 张牌或不保留",
@@ -55,12 +58,13 @@
   "${0} spent ${1} plant(s) to add ${2} animal(s) to ${3}.": "${0} 消耗了 ${1} 个植物资源，将 ${2} 个动物放置到 ${3}上。",
 
   "Microbial Reactor": "微生物反应堆",
+  "Requires that you have 2 greenery tiles in play.": "需要你拥有2个绿化板块。",
   "Effect: For every 2 microbes on this card, remove them to gain 2 heat and 1 plant production.": "效果：此牌上每有2个微生物，移除它们以获得2点热量和1点植物产量。",
   "${0} removed ${1} microbe(s) from ${2} to gain ${3} heat and increase plant production by ${4}." : "${0}从${2}移除了${1}个微生物，获得了${3}点热量并使植物产量提升了${4}点。",
 
   "Mars Monument": "火星丰碑",
   "Place the Mars Monument tile.": "放置火星丰碑板块。",
-  "Place the Mars Monument tile — a silent monument to humanity’s dream of Terraforming Mars.": "放置火星丰碑板块，献给人类地球化火星梦想的无声纪念。",
+  "Requires that you have at least 35 TR. Place the Mars Monument tile — a silent monument to humanity’s dream of Terraforming Mars.": "需要你至少有35点TR。放置火星丰碑板块，献给人类地球化火星梦想的无声纪念。",
 
   "Expansion Of Population": "种群扩张",
   "Spend 3 plants to add 3 animals to ANY card.": "消耗3个植物，将3个动物添加到任意一张卡牌上。"
